# danmaku

./: index.html  package.json  tailwind.config.ts
src/: App.tsx  DanmakuPage.tsx  SignInPage.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs
src/lib/: liveDanmaku.ts  roomid.ts
