[package]
name = "danmaku"
version = "0.0.0"
description = "Desktop danmaku for Bilibili"
authors = ["karoyqiu@gmail.com"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["window-set-decorations", "window-set-always-on-top", "window-start-dragging"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-vibrancy = "0.4.1"
anyhow = "1.0.75"
thiserror = "1.0.48"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "0.4.20"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"
